--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,56 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  background: #e9e9e9;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.btnfilter {
+  position: relative;
+  top: 30px;
+  left: 10%;
+  padding: 20px 100px;
+  font-size: 16px;
+  border: #0084ff 2px solid;
+  background: #0084ff;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.dropdown {
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 90px;
+  left: 10%;
+  background-color: #eeeeee;
+  min-width: 50%;
+  min-height: 60%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 20px 40px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.filter-bottom {
+  position: relative;
+  bottom: 0;
+  left: 70%;
+}
+
+.btn-clear, .btn-done {
+  background: #eeeeee;
+  border: #0084ff 1px solid;
+  color: #0084ff;
+  margin-right: 5px;
+  padding: 10px 50px;
+}
+
+.btn-clear:hover, .btn-done:hover {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
