--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,36 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+  display: grid;
+  grid-template-columns: 39vw 60vw;
+  grid-template-rows: 5vw 50vw;
+  background-color: #e9e9e9;
+}
+
+.navbar {
+  grid-column: 1/3;
+  background-color: #dddddd
+}
+
+.map {
+  background-color: #ebebeb
+}
+
+.property {
+  background-color: #f7f7f7
+}
+
+/* Navigation bar */
+
 .btnfilter {
   position: relative;
-  top: 30px;
-  left: 10%;
-  padding: 20px 100px;
+  top: 28px;
+  left: 30vw;
+  padding: 16px 80px;
   font-size: 16px;
-  border: #0084ff 2px solid;
-  background: #0084ff;
+  border: #2cb16e 2px solid;
+  background: #2cb16e;
   color: white;
 }
 
@@ -23,11 +45,11 @@ body {
 .dropdown-content {
   display: none;
   position: absolute;
-  top: 90px;
-  left: 10%;
+  top: 80px;
+  left: 30vw;
   background-color: #eeeeee;
-  min-width: 50%;
-  min-height: 60%;
+  min-width: 60vw;
+  min-height: 35vh;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 20px 40px;
   z-index: 1;
@@ -37,29 +59,62 @@ body {
   display: block;
 }
 
-.filter-bottom {
-  position: relative;
-  bottom: 0;
-  left: 70%;
+h2 {
+  color: #2cb16e;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
+label {
+  display: flex;
+  flex-direction: row;
+  margin-right: 15px;
+  margin-top: 7px;
+  font-size: 1.1em;
 }
 
 .btn-clear, .btn-done {
   background: #eeeeee;
-  border: #0084ff 1px solid;
-  color: #0084ff;
-  margin-right: 5px;
-  padding: 10px 50px;
+  border: #2cb16e 1px solid;
+  color: #2cb16e;
+  margin-top: 40px;
+  margin-right: 15px;
+  padding: 15px 80px;
 }
 
 .btn-clear:hover, .btn-done:hover {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
+.filter-bottom {
+  position: relative;
+  bottom: 0;
+  left: 39vw;
+}
+
+.filterSelectionItems {
+  display: flex;
+  justify-content: space-around;
+}
+
+/* Property display container */
+
+.cardContainer {
+  display: grid;
+  grid-template-columns: 30vw 30vw;
+}
+
 .card {
-  width: 20%;
-  height: 50%;
+  width: 29vw;
+  height: 63vh;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  margin: 0px 10px;
+  margin-top: 20px;
+}
+
+h4 {
+  color: #589665
 }
 
 img {
@@ -70,6 +125,14 @@ img {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.container {
-  padding: 2px 16px;
+.cardItem {
+  padding: 5px 20px;
+}
+
+.btn-email, .btn-phone {
+  background: #eeeeee;
+  border: #589665 1px solid;
+  color: #589665;
+  margin-right: 15px;
+  padding: 10px 50px;
 }
