--- a/src/App.css
+++ b/src/App.css
@@ -40,24 +40,24 @@ body {
 
 .dropdown {
   position: relative;
+  display: block;
 }
 
 .dropdown-content {
-  display: none;
   position: absolute;
-  top: 80px;
+  top: 83px;
   left: 30vw;
   background-color: #eeeeee;
   min-width: 60vw;
   min-height: 35vh;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 20px 40px;
-  z-index: 1;
+  z-index: 2;
 }
 
-.dropdown:hover .dropdown-content {
+/* .dropdown:hover .dropdown-content {
   display: block;
-}
+} */
 
 h2 {
   color: #2cb16e;
