--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@ body {
 .container {
   display: grid;
   grid-template-columns: 39vw 60vw;
-  grid-template-rows: 5vw 50vw;
+  grid-template-rows: 5vw auto;
   background-color: #e9e9e9;
+  margin-bottom: 10px;
 }
 
 .navbar {
@@ -40,7 +41,7 @@ body {
 
 .dropdown {
   position: relative;
-  display: block;
+  display: inline-block;
 }
 
 .dropdown-content {
@@ -55,14 +56,23 @@ body {
   z-index: 2;
 }
 
-/* .dropdown:hover .dropdown-content {
-  display: block;
-} */
-
 h2 {
   color: #2cb16e;
   margin-top: 40px;
   margin-bottom: 10px;
+}
+
+.priceFilter {
+  margin-left: 3vw;
+}
+
+.minPrice, .maxPrice {
+  background-color: #e9e9e9;
+  width: 15vw;
+  padding: 10px 5px;
+  margin-right: 40px;
+  font-size: 1.2em;
+  border: #2cb16e 1px solid;
 }
 
 label {
@@ -106,11 +116,11 @@ label {
 
 .card {
   width: 29vw;
-  height: 63vh;
+  height: 62vh;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 0px 10px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 h4 {
@@ -135,4 +145,13 @@ img {
   color: #589665;
   margin-right: 15px;
   padding: 10px 50px;
+}
+
+.loading {
+  position: fixed;
+  left: 0vw;
+  top: 10vh;
+  background: rgba(216, 216, 216, 0.4);
+  padding: 50vh 50vw;
+  z-index: 2;
 }
