--- a/src/App.css
+++ b/src/App.css
@@ -70,9 +70,12 @@ h2 {
   background-color: #e9e9e9;
   width: 15vw;
   padding: 10px 5px;
-  margin-right: 40px;
   font-size: 1.2em;
   border: #2cb16e 1px solid;
+}
+
+.price {
+  margin: 0px 10px;
 }
 
 label {
